# ros-ci

./: README.md
.github/workflows/: docker_build.yml  sim.yml
catkin_ws/: Dockerfile
catkin_ws/src/ci_test/: CMakeLists.txt  move.py  package.xml  sim.test  test_move.py
